test/classes/delete-free/anymanaged/anymanaged-member-used-in-method.good
anymanaged-member-used-in-method.chpl:2: warning: field is declared with generic memory management
note: consider adding 'owned', 'shared', or 'borrowed'
note: if generic memory management is desired, use a 'type' field to store the class type
anymanaged-member-used-in-method.chpl:12: error: initialization requires an argument for thing2
